ACLOCAL_AMFLAGS = -I m4
lib_LTLIBRARIES = libtomahawk.la
libtomahawk_la_SOURCES = src/buffer.cpp src/core.cpp src/fisher_math.cpp src/header.cpp src/header_internal.cpp src/importer.cpp src/index.cpp src/intervals.cpp src/ld/ld.cpp src/ld/ld_engine.cpp src/ld/ld_structs.cpp  src/tomahawk.cpp src/twk_reader.cpp src/two_reader.cpp src/two_sorter_structs.cpp src/utility.cpp src/zstd_codec.cpp src/aggregate.h src/aggregation.h src/calc.h src/concat.h src/decay.h src/fisher_math.h src/genotype_bitpacker.h src/genotype_encoder.h src/haplotype.h src/header_internal.h src/import.h src/ld/ld_balancing.h src/ld/ld_engine.h src/ld/ld_progress.h src/ld/ld_structs.h src/ld/ld_unpacker.h src/relationship.h src/scalc.h src/sort.h src/sort_progress.h src/stats.h src/third_party/boolarray.h src/third_party/ewah.h src/third_party/ewahutil.h src/third_party/runninglengthword.h src/timer.h src/two_sorter_structs.h src/vcf_reader.h src/view.h
libtomahawk_la_LDFLAGS = -shared
bin_PROGRAMS = tomahawk
tomahawk_SOURCES = src/main.cpp
tomahawk_CFLAGS = -pthread @SIMD_FLAGS@
tomahawk_CXXFLAGS = -pthread @SIMD_FLAGS@
tomahawk_LDADD = libtomahawk.la
